[#TECH] - fix the code element issue on mobile for styka

--- a/themes/styka/source/css/_partial/article.styl
+++ b/themes/styka/source/css/_partial/article.styl
@@ -146,7 +146,7 @@
     margin-top: 16px;
   }
   p code,li code{
-    padding: 0px 5px;
+    padding: 1px 5px;
     margin: 0 3px;
     color: #5d686f;
     background-color: #f7f8f8;
@@ -158,8 +158,7 @@
     text-shadow: none;
     word-wrap: break-word;
     //white-space: pre;
-    display: inline-block;
-    //line-height: normal;
+    //display: inline-block;
     font-size: 17px;
     font-weight: 400;
   }
